--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "test:watch": "jest --watchAll",
-    "coverage": "jest --coverage"
+    "test:w": "jest --watchAll",
+    "test:c": "jest --coverage"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
